--- a/ppe/ppe/css/style.css
+++ b/ppe/ppe/css/style.css
@@ -1,3 +1,4 @@
+
 body {
   background: #ffffff;
 }
@@ -74,3 +75,6 @@ p.errorMessage {
     color: #FFFFFF;
     border-radius: 3px;
 }
+
+/* CSS CAROUSEL BOOTSTRAP */
+
